@@ -1,8 +1,7 @@
 package com.jrmcdonald.ifsc.service.competitions;
 
 import com.jrmcdonald.ifsc.model.Competition;
-import okhttp3.mockwebserver.MockResponse;
-import okhttp3.mockwebserver.MockWebServer;
+
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -13,24 +12,22 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import reactor.test.StepVerifier;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.util.List;
-import java.util.Locale;
 
-import static java.util.Collections.singletonList;
+import okhttp3.mockwebserver.MockResponse;
+import okhttp3.mockwebserver.MockWebServer;
+import reactor.test.StepVerifier;
+
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class IfscCompetitionsServiceTest {
+class IfscCompetitionsServiceTest {
 
     @Mock
     IfscCompetitionsConfig config;
@@ -57,66 +54,28 @@ public class IfscCompetitionsServiceTest {
                 new MockResponse()
                         .setResponseCode(HttpStatus.OK.value())
                         .setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                        .setBody(new String(Files.readAllBytes(Paths.get("src/test/resources/data/ifscResponseInput.json")))));
+                        .setBody(Files.readString(Paths.get("src/test/resources/data/ifscResponseInput.json"))));
 
-        StepVerifier.create(service.findAll())
+        StepVerifier.create(service.findAll("388"))
                 .assertNext(competitionList -> {
-                    assertThat(competitionList.getCompetitions()).hasSize(3);
+                    assertThat(competitionList.getEvents()).hasSize(3);
 
-                    List<Competition> competitions = competitionList.getCompetitions();
+                    List<Competition> competitions = competitionList.getEvents();
 
-                    assertThat(competitions.get(0).getName()).isEqualTo("Promotional Event Gravical (B) - Singapore (SGP) 2018");
-                    assertThat(competitions.get(0).getCategory()).isEqualTo("70");
-                    assertThat(competitions.get(0).getHomepage()).isEqualTo("http://www.gravical.domain");
-                    assertThat(competitions.get(0).getStartDate()).isEqualTo(Instant.parse("2018-01-11T00:00:00Z"));
-                    assertThat(competitions.get(0).getEndDate()).isEqualTo(Instant.parse("2018-01-14T00:00:00Z"));
+                    assertThat(competitions.get(0).getEvent()).isEqualTo("IFSC - Climbing World Cup (B) - Meiringen (SUI) 2021");
+                    assertThat(competitions.get(0).getStartDate()).isEqualTo(Instant.parse("2021-04-16T00:00:00Z"));
+                    assertThat(competitions.get(0).getEndDate()).isEqualTo(Instant.parse("2021-04-17T00:00:00Z"));
 
-                    assertThat(competitions.get(1).getName()).isEqualTo("Promotional Event Gravical (B) - Tai'an (SGP) 2018");
-                    assertThat(competitions.get(1).getCategory()).isEqualTo("70");
-                    assertThat(competitions.get(1).getHomepage()).isEqualTo("http://www.gravical.domain");
-                    assertThat(competitions.get(1).getStartDate()).isEqualTo(Instant.parse("2018-02-11T00:00:00Z"));
-                    assertThat(competitions.get(1).getEndDate()).isEqualTo(Instant.parse("2018-02-14T00:00:00Z"));
+                    assertThat(competitions.get(1).getEvent()).isEqualTo("IFSC - Climbing World Cup (B) - Salt Lake City (USA) 2021");
+                    assertThat(competitions.get(1).getStartDate()).isEqualTo(Instant.parse("2021-05-21T00:00:00Z"));
+                    assertThat(competitions.get(1).getEndDate()).isEqualTo(Instant.parse("2021-05-22T00:00:00Z"));
 
-                    assertThat(competitions.get(2).getName()).isEqualTo("Cliffhanger");
-                    assertThat(competitions.get(2).getCategory()).isEqualTo("69");
-                    assertThat(competitions.get(2).getHomepage()).isEqualTo("http://www.cliffhanger.domain");
-                    assertThat(competitions.get(2).getStartDate()).isEqualTo(Instant.parse("2018-03-11T00:00:00Z"));
-                    assertThat(competitions.get(2).getEndDate()).isEqualTo(Instant.parse("2018-03-14T00:00:00Z"));
+                    assertThat(competitions.get(2).getEvent()).isEqualTo("IFSC - Climbing World Cup (B,S) - Salt Lake City (USA) 2021");
+                    assertThat(competitions.get(2).getStartDate()).isEqualTo(Instant.parse("2021-05-28T00:00:00Z"));
+                    assertThat(competitions.get(2).getEndDate()).isEqualTo(Instant.parse("2021-05-30T00:00:00Z"));
                 })
                 .verifyComplete();
 
-        assertThat(mockWebServer.takeRequest().getPath()).isEqualTo("/egw/ranking/json.php");
-    }
-
-    @Test
-    @DisplayName("Should return competitions filtered by category")
-    void shouldReturnCompetitionsFilteredByCategory() throws Exception {
-        mockWebServer.enqueue(
-                new MockResponse()
-                        .setResponseCode(HttpStatus.OK.value())
-                        .setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
-                        .setBody(new String(Files.readAllBytes(Paths.get("src/test/resources/data/ifscResponseInput.json")))));
-
-        SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd", Locale.ENGLISH);
-
-        StepVerifier.create(service.findByCategory(singletonList("69")))
-                .assertNext(competitionList -> {
-                    assertThat(competitionList.getCompetitions()).hasSize(1);
-
-                    List<Competition> competitions = competitionList.getCompetitions();
-
-                    try {
-                        assertThat(competitions.get(0).getName()).isEqualTo("Cliffhanger");
-                        assertThat(competitions.get(0).getCategory()).isEqualTo("69");
-                        assertThat(competitions.get(0).getHomepage()).isEqualTo("http://www.cliffhanger.domain");
-                        assertThat(competitions.get(0).getStartDate()).isEqualTo(formatter.parse("2018-03-11").toInstant());
-                        assertThat(competitions.get(0).getEndDate()).isEqualTo(formatter.parse("2018-03-14").toInstant());
-                    } catch (ParseException e) {
-                        fail("Unexpected exception parsing date", e);
-                    }
-                })
-                .verifyComplete();
-
-        assertThat(mockWebServer.takeRequest().getPath()).isEqualTo("/egw/ranking/json.php");
+        assertThat(mockWebServer.takeRequest().getPath()).isEqualTo("/results-api.php?api=season_leagues_calendar&league=388");
     }
 }
